# hireable

./: .gitignore  PLAN.md  README.md
apps/mobile/: .gitignore  README.md  app.json  global.css  package.json  tailwind.config.js
apps/mobile/src/api/: client.ts
apps/mobile/src/app/: _layout.tsx  analysis-report.tsx  analyzing.tsx  index.tsx  profile.tsx
apps/mobile/src/app/roadmap/: _layout.tsx  index.tsx
apps/mobile/src/app/roadmap/[topicId]/: index.tsx
apps/mobile/src/components/cv/: JobListingCard.tsx  SkillTreeDiagram.tsx  UploadCard.tsx
apps/mobile/src/components/gamification/: MascotFunFact.tsx  XPBar.tsx  XPPopup.tsx
apps/mobile/src/components/lesson/: FlashCard.tsx  LearnTab.tsx  MarkdownText.tsx  QuizCard.tsx  ResourceLink.tsx
apps/mobile/src/components/roadmap/: LessonTrackNode.tsx  ProgressRing.tsx  SubtopicRow.tsx  TopicCard.tsx
apps/mobile/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CollapsibleSection.tsx  WebMobileFrame.tsx
apps/mobile/src/stores/: useAppStore.ts
apps/mobile/src/types/: index.ts
apps/mobile/src/utils/: mascot.ts  skillTree.ts  skillTreeProgress.ts  xp.ts
backend/: .env.example  main.py  pyproject.toml  seed_demo.py
backend/hireable/: config.py  database.py
backend/hireable/agents/: content_generator.py  cv_parser.py  gap_analyzer.py  job_searcher.py  pipeline.py  roadmap_builder.py
backend/hireable/models/: __init__.py  db.py  schemas.py
backend/hireable/routers/: cv.py  lessons.py  progress.py  roadmap.py
backend/hireable/services/: openrouter.py  skill_tree_progress.py
(+2 files in other folders)
