[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
